--- a/config.json
+++ b/config.json
@@ -77,6 +77,14 @@
       }
     },
     {
+      "type": "text",
+      "action": "add",
+      "args": {
+        "name": "discord",
+        "uri": "https://raw.githubusercontent.com/GhostRooter0953/discord-voice-ips/refs/heads/master/voice_domains/discord-voice-ip-list"
+      }
+    },
+    {
       "type": "json",
       "action": "add",
       "args": {
